# nym-mobile

./: Cargo.toml  README.md
scripts/: build_android.sh  make.sh
src/: lib.rs
