[package]
name = "nym-mobile"
version = "0.1.0"
authors = ["Roberto Santacroce Martins <miles.chet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustylib"
crate-type = ["staticlib", "cdylib"] 

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.13.1", default-features = false }

[dependencies]
# mix-client = { path = "../nym/common/clients/mix-client" }
nym-client = { path = "../nym/nym-client/" }
crypto = {path = "../nym/common/crypto"}
pemstore = {path = "../nym/common/pemstore"}
pem = "0.7.0"
dirs = "2.0.2"
env_logger = "0.7.1"
clap = "2.33.0"
